--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,5 +21,15 @@
       <artifactId>api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>se.sics.kompics</groupId>
+      <artifactId>kompics-core</artifactId>
+      <version>${kompics.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>se.sics.kompics.basic</groupId>
+      <artifactId>kompics-port-network</artifactId>
+      <version>${kompics.version}</version>
+    </dependency>
   </dependencies>
 </project>
