--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -7,25 +7,15 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <groupId>se.sics.kompics.fsm</groupId>
-  <artifactId>core</artifactId>
+  <artifactId>examples</artifactId>
   <packaging>jar</packaging>
-  <name>KFSM Core</name>
+  <name>KFSM Examples</name>
     
   <dependencies>
     <dependency>
       <groupId>se.sics.kompics.fsm</groupId>
-      <artifactId>api</artifactId>
+      <artifactId>core</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>se.sics.kompics</groupId>
-      <artifactId>kompics-core</artifactId>
-      <version>${kompics.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>se.sics.kompics.basic</groupId>
-      <artifactId>kompics-port-network</artifactId>
-      <version>${kompics.version}</version>
     </dependency>
   </dependencies>
 </project>
