--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
   <modules>
     <module>api</module>
     <module>core</module>
+    <module>examples</module>
   </modules>
   <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
     <kompics.version>1.0.0-SNAPSHOT</kompics.version>
     <guava.version>18.0</guava.version>
     <tuples.version>1.2</tuples.version>
