--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,14 +18,10 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>se.sics.kompics</groupId>
-      <artifactId>kompics-core</artifactId>
-      <version>${kompics.version}</version>
-    </dependency>
-    <dependency>
       <groupId>se.sics.kompics.basic</groupId>
       <artifactId>kompics-port-network</artifactId>
       <version>${kompics.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
