--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <kompics.version>[1.0-SNAPSHOT,)</kompics.version>
+    <kompics.version>1.0.0</kompics.version>
     <guava.version>18.0</guava.version>
     <tuples.version>1.2</tuples.version>
     <config.version>1.2.1</config.version>
